# leptonica

./: .gitattributes  .gitignore  CMakeLists.txt  README.html  quick  version-notes.html
.github/workflows/: cifuzz.yml  cmake.yml  sw.yml
cmake/templates/: LeptonicaConfig.cmake.in
prog/: CMakeLists.txt  Makefile.am  adaptmap_dark.c  adaptmap_reg.c  adaptnorm_reg.c  affine_reg.c  alltests_reg.c  alphaops_reg.c  alphaxform_reg.c  arabic_lines.c  arithtest.c  autogen.137.c  autogentest1.c  autogentest2.c  barcodetest.c  baseline_reg.c  bilateral1_reg.c  bilateral2_reg.c  bilinear_reg.c  binarize_reg.c  binarize_set.c  binarizefiles.c  bincompare.c  binmorph1_reg.c  binmorph2_reg.c  binmorph3_reg.c  binmorph4_reg.c  binmorph5_reg.c  binmorph6_reg.c  blackwhite_reg.c  blend1_reg.c  blend2_reg.c  blend3_reg.c  blend4_reg.c  blend5_reg.c  blendcmaptest.c  boxa1_reg.c  boxa2_reg.c  boxa3_reg.c  boxa4_reg.c  (+286 more)
prog/fuzzing/: barcode_fuzzer.cc  binarize_fuzzer.cc  blend_fuzzer.cc  boxfunc5_fuzzer.cc  classapp_fuzzer.cc  colorquant_fuzzer.cc  compare_fuzzer.cc  dewarp_fuzzer.cc  edge_fuzzer.cc  finditalic_fuzzer.cc  flipdetect_fuzzer.cc  pix3_fuzzer.cc  pix_orient_fuzzer.cc  pixa_recog_fuzzer.cc
src/: CMakeLists.txt  adaptmap.c  affine.c  allheaders.h  alltypes.h  bardecode.c  baseline.c  bilateral.c  binarize.c  binarize_alt.c  binexpand.c  binreduce.c  blend.c  bmf.c  bmpio.c  bmpiostub.c  boxbasic.c  boxfunc1.c  boxfunc2.c  boxfunc3.c  boxfunc4.c  boxfunc5.c  bytearray.c  ccbord.c  ccthin.c  checkerboard.c  classapp.c  colorcontent.c  colorfill.c  coloring.c  colormap.c  colorquant1.c  colorquant2.c  colorseg.c  colorspace.c  compare.c  conncomp.c  convolve.c  convolve_old.c  dewarp.h  (+111 more)
test/: test_directory_ops.cpp  test_paths.cpp  test_strings.cpp  test_utils_main.cpp  tests_collective.h
